Fix an issue with inputs having a default appearance on iPhone

--- a/app/assets/stylesheets/_resets.scss
+++ b/app/assets/stylesheets/_resets.scss
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
   box-sizing: inherit;
 }
 
-input[type="button"] {
+input {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
